# npx-bin-helper

./: Cargo.toml  README.md
src/: commands.rs  consts.rs  error_consts.rs  flags.rs  gen_command.rs  generate.rs  lib.rs  main.rs  run.rs  shells.rs  utils.rs
src/commands/: env.rs  setup.rs
src/commands/env/: format.rs  generate.rs
src/shells/: bash.rs  fish.rs  powershell.rs  zsh.rs
src/tests/: generate.rs
